--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
     "@types/react-fontawesome": "^1.6.3",
     "html-webpack-plugin": "^3.2.0",
     "react-fontawesome": "^1.6.1",
+    "style-loader": "^0.21.0",
     "ts-loader": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "awesome-typescript-loader": "^5.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "typescript": "^2.9.2",
-    "webpack": "^4.12.0",
-    "webpack-dev-server": "^2.9.7",
-    "node-sass": "^4.7.2",
     "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.10",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "sass-loader": "^6.0.6",
-    "postcss-loader": "^2.0.10"
+    "typescript": "^2.9.2",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
