--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "hotel-booking",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "semantic-release": "semantic-release",
+    "test": "vows --spec"
   },
   "keywords": [],
   "author": "Abhinav Prakash <abhinav.prakash1992@gmail.com>",
@@ -33,6 +35,11 @@
     "typescript": "^2.9.2",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "semantic-release": "^17.4.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/abhinavprakash1992/Hotel-Booking-App.git"
   }
 }
