--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "html-webpack-plugin": "^3.2.0",
     "react-fontawesome": "^1.6.1",
     "style-loader": "^0.21.0",
-    "ts-loader": "^4.2.0"
+    "ts-loader": "^4.2.0",
+    "vows": "^0.8.3"
   },
   "devDependencies": {
     "@types/react": "^16.4.1",
@@ -32,11 +33,11 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "sass-loader": "^6.0.6",
+    "semantic-release": "^17.4.4",
     "typescript": "^2.9.2",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "semantic-release": "^17.4.4"
+    "webpack-dev-server": "^3.1.3"
   },
   "repository": {
     "type": "git",
